[package]
name = "origami"
version = "0.1.0"
authors = ["Oery"]
description = "A programmable Minecraft client to build agents/bots."
repository = "https://github.com/Oery/origami"
readme = "README.md"
license = "MIT"
keywords = ["minecraft", "client", "networking", "bot", "ai"]
categories = ["network-programming", "game-development", "simulation"]
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
bytes = "1.9.0"
gami_mc_protocol = { version = "0.1.1", path = "../gami_mc_protocol" }
